@@ -1,3 +1,8 @@
+2008-04-07  Akira TAGOH  <tagoh@redhat.com>
+
+	* src/im-chooser-simple.c (_im_chooser_simple_update_im_list):
+	don't update the IM list if no IM is available. (RH#440519)
+
 2008-03-26  Akira TAGOH  <tagoh@redhat.com>
 
 	* data/xinput.sh.in.in: real fix to not update .xinputrc.
